ARA-38 #Comment fixes in mutiple section - alignment, font size , fonttype

--- a/wp-content/themes/aviation/scss/_about.scss
+++ b/wp-content/themes/aviation/scss/_about.scss
@@ -50,7 +50,7 @@
                         width: 200px;
                         border-bottom: solid 6px #2a2e31;
                         border-radius: 20px;
-                        margin-top: 5px;
+                        margin-top: 20px;
                         @media all and (max-width: 860px) {
                             width: 150px;
                             border-bottom: solid 5px #2a2e31;
