--- a/wp-content/themes/aviation/scss/_partners.scss
+++ b/wp-content/themes/aviation/scss/_partners.scss
@@ -24,7 +24,8 @@
         padding-bottom: 80px;
         h2 {
             color: #fff;
-            font-size: 24px;
+            font-size: 30px;
+            font-family: SourceSans-Bd;
             padding-bottom: 40px;
             &:after {
                 display: block;
@@ -32,7 +33,7 @@
                 width: 200px;
                 border-bottom: solid 6px white;
                 border-radius: 20px;
-                margin-top: 5px;
+                margin-top: 20px;
             }
         }
         .partner-slider {
@@ -50,16 +51,8 @@
             #partner-home {
                 &.slider {
                     width: 100%;
-                    margin: 0 auto; //  z-index: 1050;
-                    .slick-list {
-                        // z-index: 1041;
-                    }
-                } // .slick-slide {
-                //   margin: 0px 30px;
-                // }
-                // .slick-slide img {
-                //   width: 100%;
-                // }
+                    margin: 0 auto;
+                }
                 .slick-prev:before,
                 .slick-next:before {
                     color: black;
@@ -93,6 +86,11 @@
                 }
             }
             /*Style for Slider*/
+            .js-slide{
+                @media all and (min-width: 992px) {
+                    display: flex !important;
+                }
+            }
             .partner-1-left {
                 width: 50%;
                 float: left;
@@ -100,6 +98,7 @@
                     width: 100%;
                 }
                 .partner-1-left-content {
+                    padding-left: 10px;
                     .partner-1-logo {
                         padding: 20px 0;
                         @media all and (max-width: 991px) {
@@ -110,8 +109,9 @@
                     }
                     .partner-1-title {
                         color: #fff;
-                        font-size: 18px;
-                        padding-bottom: 15px;
+                        font-size: 24px;
+                        padding-bottom: 10px;
+                        font-family: SourceSans-Semib;
                     }
                     .partner-image-mob {
                         display: none;
@@ -124,7 +124,11 @@
                     }
                     .partner-1-excerpt {
                         color: #fff;
-                        font-size: 14px;
+                        p {
+                            font-size: 18px;
+                            font-family: SourceSans-Rg;
+                            line-height: 22px;
+                        }
                     }
                     .read-more {
                         position: relative;
@@ -138,9 +142,10 @@
                             color: #fff;
                             padding: 0;
                             line-height: 1.7;
-                            font-size: 16px;
+                            font-size: 18px;
                             background-color: transparent;
                             border: none;
+                            font-family: SourceSans-Semib;
                             &:hover,
                             &:focus,
                             &:active {
@@ -169,6 +174,12 @@
                 width: 48%;
                 float: left;
                 text-align: center;
+                @media all and (min-width: 992px) {
+                    display: flex !important;
+                    img{
+                        align-self: center;
+                    }
+                }
                 @media all and (max-width: 991px) {
                     display: none;
                 }
@@ -201,16 +212,24 @@
                     width: 100%;
                 }
                 .partner-2-logo {
-                    padding: 30px 0 20px;
+                    padding: 30px 0 45px;
                 }
                 h2 {
                     color: #fff;
-                    font-size: 24px;
+                    font-size: 30px;
                     padding: 0 0 30px;
+                    font-family: SourceSans-Bd;
+                    &:after {
+                        display: block;
+                        content: "";
+                        width: 180px;
+                        border-bottom: solid 6px white;
+                        border-radius: 20px;
+                        margin-top: 20px;
+                    }
                 }
                 .partner-2-body {
                     color: #fff;
-                    font-size: 14px;
                     padding-right: 10px;
                     @media all and (max-width: 1200px) {
                         padding-right: 0;
@@ -229,6 +248,23 @@
                             margin-left: 0;
                             margin-right: 0;
                             width: auto;
+                        }
+                    }
+                    p {
+                        font-size: 19px;
+                        font-family: SourceSans-Bd;
+                        line-height: 22px;
+                    }
+                    button {
+                        font-size: 15px;
+                        font-family: SourceSans-Semib;
+                        margin-top: 20px;
+                        padding: 20px 70px;
+                        @media all and (max-width: 768px) {
+                            padding: 15px 50px;
+                        }
+                        @media all and (max-width: 500px) {
+                            padding: 10px 40px;
                         }
                     }
                 }
@@ -285,23 +321,21 @@
                     }
                 }
                 .partner-body {
-                    font-size: 13px;
-                    font-family: SourceSans-Semib;
                     p {
                         margin-bottom: 10px;
+                        font-size: 13px;
+                        font-family: SourceSans-Semib;
+                        margin-bottom: 25px;
                     }
                 }
                 button {
+                    box-shadow: 3px 3px 12px 1px #afadad8f;
+                    font-size: 12px;
+                    font-family: SourceSans-Rg;
                     margin-top: 30px;
                     padding: 15px 45px;
-                    color: black;
-                    text-transform: none;
-                    font-family: SourceSans-Semib;
-                    border-radius: 4px;
-                    background-color: white;
-                    box-shadow: 3px 3px 12px 1px #afadad8f;
                     @media all and (max-width: 500px) {
-                      padding: 10px 35px;
+                        padding: 10px 35px;
                     }
                 }
             }
@@ -315,6 +349,20 @@
                     }
                 }
             }
+        }
+    }
+}
+
+.partner-2-body,
+#readMoreModal .modal-body {
+    button {
+        color: black;
+        text-transform: none;
+        border-radius: 4px;
+        background-color: white;
+        &:hover,
+        &:active {
+            background: white;
         }
     }
 }
